--- a/frontend/recordatorios.html
+++ b/frontend/recordatorios.html
@@ -19,22 +19,50 @@
                 <h4 class="text-center py-4"><i class="fas fa-capsules me-2"></i>MedicApp</h4>
                 <a href="index.html"><i class="fas fa-user me-2"></i>Pacientes</a>
                 <a href="medicamentos.html"><i class="fas fa-pills me-2"></i>Medicamentos</a>
-                <a  class="bg-secondary"><i class="fas fa-clock me-2"></i>Recordatorios</a>
+                <a class="bg-secondary"><i class="fas fa-clock me-2"></i>Recordatorios</a>
             </div>
 
             <!-- Main content -->
             <div class="col-md-10 p-4">
-                <h2><i class="fas fa-user-friends me-2"></i>Pacientes</h2>
-                <div class="row mt-4">
-                    <!-- Tarjeta de paciente -->
-                    <div class="col-md-4">
+                <h2><i class="fas fa-user-friends me-2"></i>Recordatorios Toma de Medicamentos <button type="button"
+                        class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#reminder-modal" id="btn-add-reminder">
+                        Launch demo modal
+                    </button></h2>
+                <!-- Contenedor de paginación separado -->
+                <ul id="pagination-reminder" class="pagination justify-content-end mt-3"></ul>
+                <div class="row mt-4" id="container-reminder">
 
-                    </div>
-                    <!-- Repetir para más pacientes -->
+                    <!-- card de recordatorios medicamentos -->
+
                 </div>
             </div>
         </div>
     </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="reminder-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="modal-form"></form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- reminder -->
+    <script type="module" src="js/reminder/getDataReminder.js"></script>
+
+    <!--Alertas-->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
