--- a/frontend/medicamentos.html
+++ b/frontend/medicamentos.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recordatorios de Medicamentos</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Fontawesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
+    <!--CSS -->
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 
@@ -26,10 +30,13 @@
             <div class="col-md-10 p-4">
                 <h2 class=" align-items-center">
                     <i class="fa-solid fa-pills"></i> Medicamentos
-                    <button class="btn btn-primary rounded-circle ms-auto" aria-label="Agregar paciente"
-                        data-bs-toggle="modal" data-bs-target="#modalMedicamento" id="btnAgregarMedicamento">
+
+                    <!-- Botón para agregar medicamento -->
+                    <button class="btn btn-primary rounded-circle ms-auto" aria-label="Agregar medicamento"
+                        id="btnAgregarMedicamento">
                         <i class="fas fa-plus"></i>
                     </button>
+
                 </h2>
                 <!-- Contenedor de paginación separado -->
                 <ul id="pagination-medicine" class="pagination justify-content-end mt-3"></ul>
@@ -92,7 +99,10 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+
 </body>
 
 </html>
