--- a/frontend/recordatorios.html
+++ b/frontend/recordatorios.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recordatorios de Medicamentos</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- font-awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
+    <!-- CSS -->
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 
@@ -24,10 +28,13 @@
 
             <!-- Main content -->
             <div class="col-md-10 p-4">
-                <h2><i class="fas fa-user-friends me-2"></i>Recordatorios Toma de Medicamentos <button type="button"
-                        class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#reminder-modal" id="btn-add-reminder">
-                        Launch demo modal
-                    </button></h2>
+                <h2><i class="fas fa-user-friends me-2"></i>Toma de Medicamentos </h2>
+                
+                <!-- Botón para agregar recordatorio -->
+                <button type="button" class="btn btn-primary" id="btn-add-reminder">
+                    Añadir recordatorio <i class="fas fa-plus"></i>
+                </button>
+
                 <!-- Contenedor de paginación separado -->
                 <ul id="pagination-reminder" class="pagination justify-content-end mt-3"></ul>
                 <div class="row mt-4" id="container-reminder">
@@ -44,19 +51,44 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Agregar Recordatorio <i
+                            class="fas fa-bell me-2"></i></h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
                 </div>
                 <div class="modal-body">
-                    <form id="modal-form"></form>
+                    <form id="modal-form">
+                        <div class="mb-3">
+                            <label for="select-patient" class="form-label">Paciente</label>
+                            <select class="form-select" id="select-patient">
+                                <option disabled selected>Selecciona un paciente</option>
+                                <!-- Opciones dinámicas aquí -->
+                            </select>
+                        </div>
+                        <div class="mb-3">
+                            <label for="select-medicine" class="form-label">Medicamento</label>
+                            <select class="form-select" id="select-medicine">
+                                <option disabled selected>Selecciona un medicamento</option>
+                                <!-- Opciones dinámicas aquí -->
+                            </select>
+                        </div>
+                        <div class="mb-3">
+                            <label for="date" class="form-label">Fecha</label>
+                            <input type="date" class="form-control" id="date" value="">
+                        </div>
+                        <div class="mb-3">
+                            <label for="time" class="form-label">Hora</label>
+                            <input type="time" class="form-control" id="time" value="">
+                        </div>
+                    </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                    <button type="button" class="btn btn-primary" id="save">Guardar</button>
                 </div>
             </div>
         </div>
     </div>
+
 
     <!-- reminder -->
     <script type="module" src="js/reminder/getDataReminder.js"></script>
@@ -65,7 +97,10 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+
 </body>
 
 </html>
