--- a/frontend/recordatorios.html
+++ b/frontend/recordatorios.html
@@ -28,15 +28,20 @@
 
             <!-- Main content -->
             <div class="col-md-10 p-4">
-                <h2><i class="fas fa-user-friends me-2"></i>Toma de Medicamentos </h2>
-                
-                <!-- Botón para agregar recordatorio -->
-                <button type="button" class="btn btn-primary" id="btn-add-reminder">
-                    Añadir recordatorio <i class="fas fa-plus"></i>
-                </button>
+
+                <h2 class=" align-items-center">
+                    <i class="fas fa-user-friends me-2"></i>Toma de Medicamentos
+                    <!-- Botón para agregar recordatorio -->
+                    <button type="button" class="btn btn-primary" id="btn-add-reminder">
+                        Añadir recordatorio <i class="fas fa-plus"></i>
+                    </button>
+                </h2>
+
+
 
                 <!-- Contenedor de paginación separado -->
                 <ul id="pagination-reminder" class="pagination justify-content-end mt-3"></ul>
+
                 <div class="row mt-4" id="container-reminder">
 
                     <!-- card de recordatorios medicamentos -->
