--- a/frontend/medicamentos.html
+++ b/frontend/medicamentos.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recordatorios de Medicamentos</title>
-
+    <link rel="icon" href="img/logo.png" type="image/x-icon">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -24,16 +24,20 @@
                 <a href="index.html"><i class="fas fa-user me-2"></i>Pacientes</a>
                 <a class="bg-secondary"><i class="fas fa-pills me-2"></i>Medicamentos</a>
                 <a href="recordatorios.html"><i class="fas fa-clock me-2"></i>Recordatorios</a>
+                <a href="historial.html"><i class="fas fa-clock me-2"></i>Historial</a>
             </div>
 
             <!-- Main content -->
             <div class="col-md-10 p-4">
-                <h2 class=" align-items-center">
-                    <i class="fa-solid fa-pills"></i> Medicamentos
+                <h2 class="d-flex">
+                    <div class=" align-items-start">
+                        <i class="fa-solid fa-pills"></i> Medicamentos
+                    </div>
+
 
                     <!-- Botón para agregar medicamento -->
-                    <button class="btn btn-primary rounded-circle ms-auto" aria-label="Agregar medicamento"
-                        id="btnAgregarMedicamento">
+                    <button class="btn btn-primary rounded-circle ms-auto btn-modal" aria-label="Agregar medicamento"
+                        data-bs-toggle="modal" data-bs-target="#exampleModal" id="btnAgregarMedicamento">
                         <i class="fas fa-plus"></i>
                     </button>
 
