--- a/frontend/recordatorios.html
+++ b/frontend/recordatorios.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recordatorios de Medicamentos</title>
-
+    <link rel="icon" href="img/logo.png" type="image/x-icon">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -24,20 +24,23 @@
                 <a href="index.html"><i class="fas fa-user me-2"></i>Pacientes</a>
                 <a href="medicamentos.html"><i class="fas fa-pills me-2"></i>Medicamentos</a>
                 <a class="bg-secondary"><i class="fas fa-clock me-2"></i>Recordatorios</a>
+                <a href="historial.html"><i class="fas fa-clock me-2"></i>Historial</a>
             </div>
 
             <!-- Main content -->
             <div class="col-md-10 p-4">
 
-                <h2 class=" align-items-center">
-                    <i class="fas fa-user-friends me-2"></i>Toma de Medicamentos
+                <h2 class="d-flex">
+                    <div class=" align-items-start">
+                        <i class="fas fa-user-friends me-2"></i> Toma de Medicamentos
+                    </div>
+
+
                     <!-- Botón para agregar recordatorio -->
-                    <button type="button" class="btn btn-primary" id="btn-add-reminder">
-                        Añadir recordatorio <i class="fas fa-plus"></i>
+                    <button type="button" class="btn btn-primary btn-modal rounded-circle " id="btn-add-reminder">
+                        <i class="fas fa-plus"></i>
                     </button>
                 </h2>
-
-
 
                 <!-- Contenedor de paginación separado -->
                 <ul id="pagination-reminder" class="pagination justify-content-end mt-3"></ul>
